Added second database in config and testing context

--- a/config/parameters.yml
+++ b/config/parameters.yml
@@ -1,6 +1,8 @@
 config:
   type: mysql
-  base: electronic_store
   host: localhost
   user: root
   pass: null
+  bases:
+   - electronic_store
+   - warships
